pinniped-dex-github/config/ingress.ytt.yaml
#@ load("@ytt:data", "data")

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pinniped-supervisor
  name: pinniped-supervisor
  namespace: pinniped-supervisor
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: pinniped-supervisor

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pinniped-supervisor
  namespace: pinniped-supervisor
annotations:
  #@ if/end data.values.ingress_class:
  kubernetes.io/ingress.class: #@ data.values.ingress_class
  #@ if/end data.values.cert_manager.tls_acme:
  kubernetes.io/tls-acme: "true"
  #@ if/end data.values.cert_manager.cluster_issuer:
  certmanager.k8s.io/cluster-issuer: #@ data.values.cert_manager.cluster_issuer
spec:
  tls:
  - hosts:
    - #@ data.values.pinniped_host
    secretName: tls
  rules:
  - host: #@ data.values.pinniped_host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pinniped-supervisor
            port:
              number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
annotations:
  #@ if/end data.values.ingress_class:
  kubernetes.io/ingress.class: #@ data.values.ingress_class
  #@ if/end data.values.cert_manager.tls_acme:
  kubernetes.io/tls-acme: "true"
  #@ if/end data.values.cert_manager.cluster_issuer:
  certmanager.k8s.io/cluster-issuer: #@ data.values.cert_manager.cluster_issuer
spec:
  tls:
  - hosts:
    - #@ data.values.dex_host
    secretName: tls
  rules:
  - host: #@ data.values.dex_host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dex
            port:
              name: dex
